adding the head section of code

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="EN">
 <head>
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <script src="https://kit.fontawesome.com/571203546c.js" crossorigin="anonymous"></script>
+    <title>Ohmyfood</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <!-- <title>Inserting a Google Font</title> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
+<!-- Nav-section -->
 <body>
     <h1>A fantastic title</h1>
 </body>
