Creating nav section

--- a/index.html
+++ b/index.html
@@ -19,5 +19,19 @@
             <h4>Paris, Belleville</h4>
         </div>
     </div>
+   <div class="nav">
+    <h2>Book the menu you like</h2>
+    <h3>Discover top-of-the-art restaurants we picked for you</h3>
+    <h4>Explore our restaurants</h4>
+   </div>
+   <div class="nav-2">
+    <h4>Choose a restaurant</h4>
+   </div>
+   <div class="nav-2">
+    <h4>Create your menu</h4>
+   </div>
+   <div class="nav-2">
+    <h4>Go enjoy it at the restaurant</h4>
+   </div>
 </body>
 </html>
