--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
     <h4>Explore our restaurants</h4>
    </div>
    <div class="nav-2">
+    <i class="fa-solid fa-mobile-screen-button"></i>
     <h4>Choose a restaurant</h4>
    </div>
    <div class="nav-2">
+    <i class="fa-solid fa-list"></i>
     <h4>Create your menu</h4>
    </div>
    <div class="nav-2">
+    <i class="fa-solid fa-store"></i>
     <h4>Go enjoy it at the restaurant</h4>
    </div>
 </body>
