Adding image files and images to webiste

--- a/index.html
+++ b/index.html
@@ -36,5 +36,54 @@
     <i class="fa-solid fa-store"></i>
     <h4>Go enjoy it at the restaurant</h4>
    </div>
+   <section class="Restaurants">
+    <div class="title">
+        <h2>Restaurants</h2>
+    <div class="rest-col">
+        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            alt="The Full Palette">
+        <div class="rest-detail">
+            <h3>The Full Palette</h3>
+            <p>New York</p>
+            <div>
+                <i class="fa-sharp fa-light fa-heart"></i>
+            </div>
+        </div>
+    </div>
+    <div class="rest-col">
+        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+            alt="The Enchanted Plate">
+        <div class="rest-detail">
+            <h3>The Enchated Plate</h3>
+            <p>New York</p>
+            <div>
+                <i class="fa-sharp fa-light fa-heart"></i>
+            </div>
+        </div>
+    </div>
+    <div class="rest-col">
+        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+            alt="Bastille">
+        <div class="rest-detail">
+            <h3>Bastille</h3>
+            <p>New York</p>
+            <div>
+                <i class="fa-sharp fa-light fa-heart"></i>
+            </div>
+        </div>
+    </div>
+    <div class="rest-col">
+        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+            alt="Le Gourmand">
+        <div class="rest-detail">
+            <h3>Le Gourmand</h3>
+            <p>New York</p>
+            <div>
+                <i class="fa-sharp fa-light fa-heart"></i>
+            </div>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
