--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="EN">
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
@@ -12,78 +13,80 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <!-- Nav-section -->
+
 <body>
-    <div class="menu">
-        <div class="heading">
-            <h1>ohmyfood</h1>
-            <h4>Paris, Belleville</h4>
-        </div>
-    </div>
-   <div class="nav">
-    <h2>Book the menu you like</h2>
-    <h3>Discover top-of-the-art restaurants we picked for you</h3>
-    <h4>Explore our restaurants</h4>
-   </div>
-   <div class="nav-2">
-    <i class="fa-solid fa-mobile-screen-button"></i>
-    <h4>Choose a restaurant</h4>
-   </div>
-   <div class="nav-2">
-    <i class="fa-solid fa-list"></i>
-    <h4>Create your menu</h4>
-   </div>
-   <div class="nav-2">
-    <i class="fa-solid fa-store"></i>
-    <h4>Go enjoy it at the restaurant</h4>
-   </div>
-   <section class="Restaurants">
-    <div class="title">
-        <h2>Restaurants</h2>
-    <div class="rest-col">
-        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-            alt="The Full Palette">
-        <div class="rest-detail">
-            <h3>The Full Palette</h3>
-            <p>New York</p>
-            <div>
-                <i class="fa-sharp fa-light fa-heart"></i>
+    <header class="top">
+        <img id="logo" src="./images/logo/ohmyfood.png" alt="ohmyfood"></a>
+        <nav>
+            <div class="menu">
+                <div class="sub- heading">
+                    <h4>Paris, Belleville</h4>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="rest-col">
-        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-            alt="The Enchanted Plate">
-        <div class="rest-detail">
-            <h3>The Enchated Plate</h3>
-            <p>New York</p>
-            <div>
-                <i class="fa-sharp fa-light fa-heart"></i>
+            <div class="nav">
+                <h2>Book the menu you like</h2>
+                <h3>Discover top-of-the-art restaurants we picked for you</h3>
+                <h4>Explore our restaurants</h4>
             </div>
+        </nav>
+        <div class="nav-2">
+            <i class="fa-solid fa-mobile-screen-button"></i>
+            <h4>Choose a restaurant</h4>
         </div>
-    </div>
-    <div class="rest-col">
-        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-            alt="Bastille">
-        <div class="rest-detail">
-            <h3>Bastille</h3>
-            <p>New York</p>
-            <div>
-                <i class="fa-sharp fa-light fa-heart"></i>
-            </div>
+        <div class="nav-2">
+            <i class="fa-solid fa-list"></i>
+            <h4>Create your menu</h4>
         </div>
-    </div>
-    <div class="rest-col">
-        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-            alt="Le Gourmand">
-        <div class="rest-detail">
-            <h3>Le Gourmand</h3>
-            <p>New York</p>
-            <div>
-                <i class="fa-sharp fa-light fa-heart"></i>
-            </div>
+        <div class="nav-2">
+            <i class="fa-solid fa-store"></i>
+            <h4>Go enjoy it at the restaurant</h4>
         </div>
-    </div>
-</section>
+        <section class="Restaurants">
+            <div class="title">
+                <h2>Restaurants</h2>
+                <div class="rest-col">
+                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette">
+                    <div class="rest-detail">
+                        <h3>The Full Palette</h3>
+                        <p>New York</p>
+                        <div>
+                            <i class="fa-sharp fa-light fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="rest-col">
+                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="The Enchanted Plate">
+                    <div class="rest-detail">
+                        <h3>The Enchated Plate</h3>
+                        <p>New York</p>
+                        <div>
+                            <i class="fa-sharp fa-light fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="rest-col">
+                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
+                    <div class="rest-detail">
+                        <h3>Bastille</h3>
+                        <p>New York</p>
+                        <div>
+                            <i class="fa-sharp fa-light fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="rest-col">
+                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                        alt="Le Gourmand">
+                    <div class="rest-detail">
+                        <h3>Le Gourmand</h3>
+                        <p>New York</p>
+                        <div>
+                            <i class="fa-sharp fa-light fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+        </section>
 
 </body>
+
 </html>
