Adding styling to nav section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/571203546c.js" crossorigin="anonymous"></script>
     <title>Ohmyfood</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
     <!-- <title>Inserting a Google Font</title> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
         <img id="logo" src="./images/logo/ohmyfood.png" alt="ohmyfood"></a>
         <nav>
             <div class="menu">
-                <div class="sub- heading">
+                <div class="sub-heading">
                     <h4>Paris, Belleville</h4>
                 </div>
             </div>
