--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <div class="title">
                 <h2>Restaurants</h2>
                 <div class="rest-col">
+                    <a href="./pages/menu.html">
                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette">
                     <div class="rest-detail">
                         <h3>The Full Palette</h3>
@@ -54,6 +55,7 @@
                         </div>
                     </div>
                 </div>
+            </a>
                 <div class="rest-col">
                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="The Enchanted Plate">
                     <div class="rest-detail">
