--- a/index.html
+++ b/index.html
@@ -29,65 +29,85 @@
                 <h4>Explore our restaurants</h4>
             </div>
         </nav>
-        <div class="nav-2">
-            <i class="fa-solid fa-mobile-screen-button"></i>
-            <h4>Choose a restaurant</h4>
-        </div>
-        <div class="nav-2">
-            <i class="fa-solid fa-list"></i>
-            <h4>Create your menu</h4>
-        </div>
-        <div class="nav-2">
-            <i class="fa-solid fa-store"></i>
-            <h4>Go enjoy it at the restaurant</h4>
-        </div>
-        <section class="Restaurants">
-            <div class="title">
-                <h2>Restaurants</h2>
-                <div class="rest-col">
-                    <a href="./pages/menu.html">
-                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette">
-                    <div class="rest-detail">
-                        <h3>The Full Palette</h3>
-                        <p>New York</p>
-                        <div>
-                            <i class="fa-sharp fa-light fa-heart"></i>
+        <main>
+            <div class="nav-2">
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                <h4>Choose a restaurant</h4>
+            </div>
+            <div class="nav-2">
+                <i class="fa-solid fa-list"></i>
+                <h4>Create your menu</h4>
+            </div>
+            <div class="nav-2">
+                <i class="fa-solid fa-store"></i>
+                <h4>Go enjoy it at the restaurant</h4>
+            </div>
+            <section class="Restaurants">
+                <div class="title">
+                    <h2>Restaurants</h2>
+                    <div class="rest-col">
+                        <a href="./pages/menu.html">
+                            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                alt="The Full Palette">
+                            <div class="rest-detail">
+                                <h3>The Full Palette</h3>
+                                <p>New York</p>
+                                <div>
+                                    <i class="fa-sharp fa-light fa-heart"></i>
+                                </div>
+                            </div>
+                    </div>
+                    </a>
+                    <div class="rest-col">
+                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="The Enchanted Plate">
+                        <div class="rest-detail">
+                            <h3>The Enchated Plate</h3>
+                            <p>New York</p>
+                            <div>
+                                <i class="fa-sharp fa-light fa-heart"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
-                <div class="rest-col">
-                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="The Enchanted Plate">
-                    <div class="rest-detail">
-                        <h3>The Enchated Plate</h3>
-                        <p>New York</p>
-                        <div>
-                            <i class="fa-sharp fa-light fa-heart"></i>
+                    <div class="rest-col">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
+                        <div class="rest-detail">
+                            <h3>Bastille</h3>
+                            <p>New York</p>
+                            <div>
+                                <i class="fa-sharp fa-light fa-heart"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="rest-col">
-                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
-                    <div class="rest-detail">
-                        <h3>Bastille</h3>
-                        <p>New York</p>
-                        <div>
-                            <i class="fa-sharp fa-light fa-heart"></i>
+                    <div class="rest-col">
+                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="Le Gourmand">
+                        <div class="rest-detail">
+                            <h3>Le Gourmand</h3>
+                            <p>New York</p>
+                            <div>
+                                <i class="fa-sharp fa-light fa-heart"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="rest-col">
-                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                        alt="Le Gourmand">
-                    <div class="rest-detail">
-                        <h3>Le Gourmand</h3>
-                        <p>New York</p>
-                        <div>
-                            <i class="fa-sharp fa-light fa-heart"></i>
-                        </div>
+            </section>
+        </main>
+        <footer>
+            <section class="foot">
+                <div class="footer">
+                    <div class="row">
+                        <img id="logo-2" src="./images/logo/ohmyfood.png" alt="ohmyfood">
                     </div>
                 </div>
-        </section>
+                <div class="row-2">
+                    <p>Suggest a restaurant</p>
+                    <p>Become a partner</p>
+                </div>
+                <div class="row-3">
+                    <p>Legal</p>
+                    <p>Contact</p>
+                </div>
+            </section>
+        </footer>
 
 </body>
 
