Adding the correct heart icon

--- a/menu-1.html
+++ b/menu-1.html
@@ -22,7 +22,7 @@
     <main>
         <div class="background">
             <img id="image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette">
-        <div class="The-full-palette">
+        <div class="restaurant-name">
             <h2> The Full Palette</h2>
             <div class="menu-title">
                 <h3>ENTREES</h3>
