--- a/menu-3.html
+++ b/menu-3.html
@@ -16,103 +16,77 @@
 
 <body>
     <header class="top">
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img id="logo" src="./images/logo/ohmyfood.png" alt="ohmyfood">
     </header>
-    <nav>
-        <div class="menu">
-            <div class="sub-heading">
-                <h4>Paris, Belleville</h4>
-            </div>
-        </div>
-        <div class="nav">
-            <h2>Book the menu you like</h2>
-            <h3>Discover top-of-the-art restaurants we picked for you</h3>
-            <button class="purple"><a href="#restaurants">Explore our restaurants</a></button>
-        </div>
-    </nav>
     <main>
-            <section class="How-it-works">
-                <h2> How it works</h2>
-                <div class="nav-2">
-                    <div class="bubble-1">
-                        <button class="circle">1</button>
-                        <i class="fa-solid fa-mobile-screen-button"></i>
-                        <h4>Choose a restaurant</h4>
-                    </div>
-
-                    <div class="bubble-2">
-                        <button class="circle">2</button>
-                        <i class="fa-solid fa-list"></i>
-                        <h4>Create your menu</h4>
-                    </div>
-                    <div class="bubble-3">
-                        <button class="circle">3</button>
-                        <i class="fa-solid fa-store"></i>
-                        <h4>Go enjoy it at the restaurant</h4>
-                    </div>
-                </div>
-        </section>
-        <div class="Restaurants" id="restaurants">
-            <div class="title">
-                <h2>Restaurants</h2>
+        <div class="background">
+            <img id="image" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
+        <div class="restaurant-name">
+            <h2> Bastille</h2>
+            <div class="menu-title">
+                <h3>ENTREES</h3>
             </div>
-                <div class="rest-col">
-                    <a href="menu-1.html">
-                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette">
-                        <div class="rest-detail">
-                            <h3>The Full Palette</h3>
-                            <p>New York</p>
-                            <div>
-                                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-                                    <path
-                                        d="M225.8 468.2l-2.5-2.3L48.1 303.2C17.4 274.7 0 234.7 0 192.8v-3.3c0-70.4 50-130.8 119.2-144C158.6 37.9 198.9 47 231 69.6c9 6.4 17.4 13.8 25 22.3c4.2-4.8 8.7-9.2 13.5-13.3c3.7-3.2 7.5-6.2 11.5-9c0 0 0 0 0 0C313.1 47 353.4 37.9 392.8 45.4C462 58.6 512 119.1 512 189.5v3.3c0 41.9-17.4 81.9-48.1 110.4L288.7 465.9l-2.5 2.3c-8.2 7.6-19 11.9-30.2 11.9s-22-4.2-30.2-11.9zM239.1 145c-.4-.3-.7-.7-1-1.1l-17.8-20c0 0-.1-.1-.1-.1c0 0 0 0 0 0c-23.1-25.9-58-37.7-92-31.2C81.6 101.5 48 142.1 48 189.5v3.3c0 28.5 11.9 55.8 32.8 75.2L256 430.7 431.2 268c20.9-19.4 32.8-46.7 32.8-75.2v-3.3c0-47.3-33.6-88-80.1-96.9c-34-6.5-69 5.4-92 31.2c0 0 0 0-.1 .1s0 0-.1 .1l-17.8 20c-.3 .4-.7 .7-1 1.1c-4.5 4.5-10.6 7-16.9 7s-12.4-2.5-16.9-7z" />
-                                </svg>
-                            </div>
-                        </div>
-                    </a>
+        <div class="nav-3">
+            <div class="food-1">
+                <h4>Citrus Squid Carpaccio</h4>
+                <p>With orange zest</p>
+                <li><strong>25€</strong></li>
+            </div>
+            <div class="food-2">
+                <h4>Grandmother's Vegetable Soup</h4>
+                <p>Carrots, parsnips, Jerusalem artichoke</p>
+                <li><strong>35€</strong></li>
+            </div>
+            <div class="food-3">
+                <h4>Onion Soup</h4>
+                <p>Revisted</p>
+                <li><strong>20€</strong></li>
+            </div>
+        </div>
+        <div class="menu-title">
+            <h3>MAIN DISH</h3>
+        </div>
+        <div class="nav-4">
+            <div class="food-1">
+                <h4>Scallops</h4>
+                <p>With mashed parsnip</p>
+                <li><strong>40€</strong></li>
+            </div>
+            <div class="food-2">
+                <h4>Magret de canard</h4>
+                <p>With mashed potatoes</p>
+                <li><strong>35€</strong></li>
+            </div>
+            <div class="food-3">
+                <h4>Game Hen</h4>
+                <p>With vegetable gnocchis</p>
+                <li><strong>44€</strong></li>
+            </div>
+            </div>
+            <div class="menu-title">
+                <h3>DESSERTS</h3>
+            </div>
+            <div class="nav-5">
+                <div class="food-1">
+                    <h4>Floral Ice Cream</h4>
+                    <p>With hazelnut butter</p>
+                    <li><strong>18€</strong></li>
                 </div>
-
-                <div class="rest-col">
-                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="The Enchanted Plate">
-                    <div class="rest-detail">
-                        <h3>The Enchated Plate</h3>
-                        <p>New York</p>
-                        <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-                                <path
-                                    d="M225.8 468.2l-2.5-2.3L48.1 303.2C17.4 274.7 0 234.7 0 192.8v-3.3c0-70.4 50-130.8 119.2-144C158.6 37.9 198.9 47 231 69.6c9 6.4 17.4 13.8 25 22.3c4.2-4.8 8.7-9.2 13.5-13.3c3.7-3.2 7.5-6.2 11.5-9c0 0 0 0 0 0C313.1 47 353.4 37.9 392.8 45.4C462 58.6 512 119.1 512 189.5v3.3c0 41.9-17.4 81.9-48.1 110.4L288.7 465.9l-2.5 2.3c-8.2 7.6-19 11.9-30.2 11.9s-22-4.2-30.2-11.9zM239.1 145c-.4-.3-.7-.7-1-1.1l-17.8-20c0 0-.1-.1-.1-.1c0 0 0 0 0 0c-23.1-25.9-58-37.7-92-31.2C81.6 101.5 48 142.1 48 189.5v3.3c0 28.5 11.9 55.8 32.8 75.2L256 430.7 431.2 268c20.9-19.4 32.8-46.7 32.8-75.2v-3.3c0-47.3-33.6-88-80.1-96.9c-34-6.5-69 5.4-92 31.2c0 0 0 0-.1 .1s0 0-.1 .1l-17.8 20c-.3 .4-.7 .7-1 1.1c-4.5 4.5-10.6 7-16.9 7s-12.4-2.5-16.9-7z" />
-                            </svg>
-                        </div>
-                    </div>
+                <div class="food-2">
+                    <h4>Chocolate Lava Cake</h4>
+                    <p>Revisited</p>
+                    <li><strong>22€</strong></li>
                 </div>
-                <div class="rest-col">
-                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
-                    <div class="rest-detail">
-                        <h3>Bastille</h3>
-                        <p>New York</p>
-                        <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-                                <path
-                                    d="M225.8 468.2l-2.5-2.3L48.1 303.2C17.4 274.7 0 234.7 0 192.8v-3.3c0-70.4 50-130.8 119.2-144C158.6 37.9 198.9 47 231 69.6c9 6.4 17.4 13.8 25 22.3c4.2-4.8 8.7-9.2 13.5-13.3c3.7-3.2 7.5-6.2 11.5-9c0 0 0 0 0 0C313.1 47 353.4 37.9 392.8 45.4C462 58.6 512 119.1 512 189.5v3.3c0 41.9-17.4 81.9-48.1 110.4L288.7 465.9l-2.5 2.3c-8.2 7.6-19 11.9-30.2 11.9s-22-4.2-30.2-11.9zM239.1 145c-.4-.3-.7-.7-1-1.1l-17.8-20c0 0-.1-.1-.1-.1c0 0 0 0 0 0c-23.1-25.9-58-37.7-92-31.2C81.6 101.5 48 142.1 48 189.5v3.3c0 28.5 11.9 55.8 32.8 75.2L256 430.7 431.2 268c20.9-19.4 32.8-46.7 32.8-75.2v-3.3c0-47.3-33.6-88-80.1-96.9c-34-6.5-69 5.4-92 31.2c0 0 0 0-.1 .1s0 0-.1 .1l-17.8 20c-.3 .4-.7 .7-1 1.1c-4.5 4.5-10.6 7-16.9 7s-12.4-2.5-16.9-7z" />
-                            </svg>
-                        </div>
-                    </div>
+                <div class="food-3">
+                    <h4>Napolean</h4>
+                    <p>With blueberries and marzipan</p>
+                    <li><strong>23€</strong></li>
                 </div>
-                <div class="rest-col">
-                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                        alt="Le Gourmand">
-                    <div class="rest-detail">
-                        <h3>Le Gourmand</h3>
-                        <p>New York</p>
-                        <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-                                <path
-                                    d="M225.8 468.2l-2.5-2.3L48.1 303.2C17.4 274.7 0 234.7 0 192.8v-3.3c0-70.4 50-130.8 119.2-144C158.6 37.9 198.9 47 231 69.6c9 6.4 17.4 13.8 25 22.3c4.2-4.8 8.7-9.2 13.5-13.3c3.7-3.2 7.5-6.2 11.5-9c0 0 0 0 0 0C313.1 47 353.4 37.9 392.8 45.4C462 58.6 512 119.1 512 189.5v3.3c0 41.9-17.4 81.9-48.1 110.4L288.7 465.9l-2.5 2.3c-8.2 7.6-19 11.9-30.2 11.9s-22-4.2-30.2-11.9zM239.1 145c-.4-.3-.7-.7-1-1.1l-17.8-20c0 0-.1-.1-.1-.1c0 0 0 0 0 0c-23.1-25.9-58-37.7-92-31.2C81.6 101.5 48 142.1 48 189.5v3.3c0 28.5 11.9 55.8 32.8 75.2L256 430.7 431.2 268c20.9-19.4 32.8-46.7 32.8-75.2v-3.3c0-47.3-33.6-88-80.1-96.9c-34-6.5-69 5.4-92 31.2c0 0 0 0-.1 .1s0 0-.1 .1l-17.8 20c-.3 .4-.7 .7-1 1.1c-4.5 4.5-10.6 7-16.9 7s-12.4-2.5-16.9-7z" />
-                            </svg>
-                        </div>
-                    </div>
-                </div>
-                </div>
+            </div>
+        </div>
+        </div>
+        </div>
     </main>
     <footer>
         <section class="foot">
