--- a/menu-1.html
+++ b/menu-1.html
@@ -22,69 +22,74 @@
     <main>
         <div class="background">
             <img id="image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette">
-        <div class="restaurant-name">
-            <h2> The Full Palette</h2>
-            <div class="menu-title">
-                <h3>ENTREES</h3>
-            </div>
-        <div class="nav-3">
-            <div class="food-1">
-                <h4>Escargot</h4>
-                <p>With southern French spices</p>
-                <li><strong>25€</strong></li>
-            </div>
-            <div class="food-2">
-                <h4>Duck Foie Gras</h4>
-                <p>With black truffle shavings</p>
-                <li><strong>35€</strong></li>
-            </div>
-            <div class="food-3">
-                <h4>Fried Egg</h4>
-                <p>Seasoned with truffle and...</p>
-                <li><strong>20€</strong></li>
-            </div>
-        </div>
-        <div class="menu-title">
-            <h3>MAIN DISH</h3>
-        </div>
-        <div class="nav-4">
-            <div class="food-1">
-                <h4>Herb-Encrusted Steak</h4>
-                <p>With delicately sliced and seasoned veg...</p>
-                <li><strong>40€</strong></li>
-            </div>
-            <div class="food-2">
-                <h4>Ox Tail Shepherds Pie</h4>
-                <p>With black truffle and pureed parsnips</p>
-                <li><strong>35€</strong></li>
-            </div>
-            <div class="food-3">
-                <h4>Filet of Sole</h4>
-                <p>With citrus dressing</p>
-                <li><strong>44€</strong></li>
-            </div>
-            </div>
-            <div class="menu-title">
-                <h3>DESSERTS</h3>
-            </div>
-            <div class="nav-5">
-                <div class="food-1">
-                    <h4>Paris-Brest</h4>
-                    <p>Revisited</p>
-                    <li><strong>18€</strong></li>
+            <div class="restaurant-name">
+                <h2> The Full Palette</h2>
+                <div class="menu-title">
+                    <h3>ENTREES</h3>
                 </div>
-                <div class="food-2">
-                    <h4>Chocolate Macaroons</h4>
-                    <p>With vanilla ice cream</p>
-                    <li><strong>22€</strong></li>
+                <div class="nav-3">
+                    <div class="food-1">
+                        <div>
+                            <h4>Escargot</h4>
+                            <p>With southern French spices</p>
+                        </div>
+                        <!-- <div class="price"> -->
+                        <p><strong>25€</strong></p>
+                        <p class="check"> <i class="fa-regular fa-circle-check"></i></p>
+                        <!-- </div> -->
+                    </div>
+                    <div class="food-2">
+                        <h4>Duck Foie Gras</h4>
+                        <p>With black truffle shavings</p>
+                        <li><strong>35€</strong></li>
+                    </div>
+                    <div class="food-3">
+                        <h4>Fried Egg</h4>
+                        <p>Seasoned with truffle and...</p>
+                        <li><strong>20€</strong></li>
+                    </div>
                 </div>
-                <div class="food-3">
-                    <h4>Chocolate Mousse</h4>
-                    <p>With spices and black truffle</p>
-                    <li><strong>23€</strong></li>
+                <div class="menu-title">
+                    <h3>MAIN DISH</h3>
+                </div>
+                <div class="nav-4">
+                    <div class="food-1">
+                        <h4>Herb-Encrusted Steak</h4>
+                        <p>With delicately sliced and seasoned veg...</p>
+                        <li><strong>40€</strong></li>
+                    </div>
+                    <div class="food-2">
+                        <h4>Ox Tail Shepherds Pie</h4>
+                        <p>With black truffle and pureed parsnips</p>
+                        <li><strong>35€</strong></li>
+                    </div>
+                    <div class="food-3">
+                        <h4>Filet of Sole</h4>
+                        <p>With citrus dressing</p>
+                        <li><strong>44€</strong></li>
+                    </div>
+                </div>
+                <div class="menu-title">
+                    <h3>DESSERTS</h3>
+                </div>
+                <div class="nav-5">
+                    <div class="food-1">
+                        <h4>Paris-Brest</h4>
+                        <p>Revisited</p>
+                        <li><strong>18€</strong></li>
+                    </div>
+                    <div class="food-2">
+                        <h4>Chocolate Macaroons</h4>
+                        <p>With vanilla ice cream</p>
+                        <li><strong>22€</strong></li>
+                    </div>
+                    <div class="food-3">
+                        <h4>Chocolate Mousse</h4>
+                        <p>With spices and black truffle</p>
+                        <li><strong>23€</strong></li>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
         </div>
     </main>
