sorting out code and adding a new scss file

--- a/menu-1.html
+++ b/menu-1.html
@@ -35,7 +35,7 @@
                         </div>
                         <!-- <div class="price"> -->
                         <p><strong>25€</strong></p>
-                        <p class="check"> <i class="fa-regular fa-circle-check"></i></p>
+                        <div class="check"> <p><i class="fa-regular fa-circle-check"></i></p></div>
                         <!-- </div> -->
                     </div>
                     <div class="food-2">
