--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             </div>
             <div class="rest-col">
                 <a href="menu-1.html">
+                    <div>
+                        <p class="new">New</p>
+                    </div>
                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette">
                     <div class="rest-detail">
                         <h3>The Full Palette</h3>
@@ -87,6 +90,9 @@
 
             <div class="rest-col">
                 <a href="menu-2.html">
+                    <!-- <div>
+                        <p class="new">New</p>
+                    </div> -->
                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="The Enchanted Plate">
                     <div class="rest-detail">
                         <h3>The Enchanted Plate</h3>
