Sorting out viewbox

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <!-- Nav-section -->
 
@@ -72,15 +75,14 @@
                                     <defs>
                                         <linearGradient id="Gradient-1">
                                             <stop class="stop-1" offset="0%" />
-                                            <stop class="stop-2" offset="50%" />
-                                            <stop class="stop-3" offset="100%" />
-                                        </linearGradient>
-                                        <LinearGradient id="Gradient-2" x1="0" x2="0" y1="0" y2="1">
-                                            <stop offset="0%" stop-color="purple" />
-                                            <stop offset="50%" stop-color="pink" stop-opacity="0" />
-                                            <stop offset="0%" stop-color="blue" />
-
-                                        </LinearGradient>
+                                            <stop class="stop-2" offset="100%" />
+                                            <stop class="stop-3" offset="0%" />
+                                        </linearGradient> 
+                                        <LinearGradient id="Gradient-2" x1="0.5" x2="0.5" y1="0" y2="1">
+                                            <stop offset="0%" stop-color="#9356DC"></stop>
+                                            <stop offset="100%" stop-color="#FF79DA"></stop>
+                                            <stop offset="0%" stop-color="#9356DC"></stop>
+                                           </LinearGradient>
                                     </defs>
                             </svg>
                         </div>
@@ -140,21 +142,13 @@
         </div>
     </main>
     <footer>
-        <section class="foot">
-            <div class="footer">
-                <div class="row">
-                    <img id="logo-2" src="./images/logo/ohmyfood.png" alt="ohmyfood">
-                </div>
-            </div>
-            <div class="row-2">
-                <p>Suggest a restaurant</p>
-                <p>Become a partner</p>
-            </div>
-            <div class="row-3">
-                <p>Legal</p>
-                <p>Contact</p>
-            </div>
-        </section>
+        <h2>ohmyfood</h2>
+        <ul>
+            <li> <a href="#"><i class="fa-solid fa-utensils"></i>Suggest a restaurant</a></li>
+            <li> <a href="#"><i class="fa-solid fa-handshake"></i>Become a partner</a></li>
+            <li> <a href="#">Legal</a></li>
+            <li> <a href="#">Contact</a></li>
+        </ul>
     </footer>
 
 </body>
